--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net40-client" />
-  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net40-client" />
+  <package id="OxyPlot.Core" version="2.1.2" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.1.2" targetFramework="net461" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.2" targetFramework="net461" />
 </packages>
